@@ -1,4 +1,5 @@
 4.0.14
+ * Fix latency reported by ideal consistency level monitoring (CASSANDRA-19651)
  * Fix schema.cql created by a snapshot after dropping more than one column (CASSANDRA-19747)
  * UnsupportedOperationException when reducing scope for LCS compactions (CASSANDRA-19704)
  * Make LWT conditions behavior on frozen and non-frozen columns consistent for null column values (CASSANDRA-19637)
